[metadata]
name = coding_problems

#attr: example.__version__
version = 0.0.1

[options]
packages = find:
zip_safe = True
# include_package_data = True

install_requires =


# src layout, new line is needed
package_dir =
    =src

[options.packages.find]
where = src

#[options.entry_points]
#console_scripts =
#    my-example-utility = example.example_module:main

[options.extras_require]
dev =
    black
    flake8
    pytest
    mypy

#[options.package_data]
#example = data/schema.json, *.txt
#* = README.md

[mypy]
ignore_missing_imports = True
# strict = True
